# daos-e2sar

./: .gitignore  README.md  meson.build  meson_options.txt
containers/rocky-dev/: Dockerfile  README.md
tests/: meson.build
tests/daos/: meson.build  test_daos_version.cpp
